--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "redis": "^4.6.7",
+    "@upstash/redis": "^1.28.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0"
