--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@upstash/redis": "^1.28.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "date-fns-tz": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
